# kafka-with-grpc

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: client.py  generate.py  server.py
src/protos/: message.proto
